# coppeliasim-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api-testbed/: CMakeLists.txt  README.md  api-testbed.cpp  api-testbed.h  scene.ttt
coppeliasim-cpp-client/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build.bat  client-example.cpp  coppeliasim-cpp-client.cpp  coppeliasim-cpp-client.h  install.bat  scene.ttt
coppeliasim-cpp-client/examples/: pose_tracker.cpp
coppeliasim-cpp-client/include/: client.h
coppeliasim-cpp-client/src/: client.cpp
coppeliasim-cpp-client/tests/: CMakeLists.txt  fake_simx.cpp  fake_simx.h  test_client_functional.cpp  test_client_realstack.cpp  test_structs.cpp
degeneration-experiment/: CMakeLists.txt  README.md  degeneration-experiment.cpp  degeneration-experiment.h  new-test-scene.ttt  scene.ttt  test-scene.ttt
degeneration-experiment/include/: client.h  experiment.h  logger.h
degeneration-experiment/src/: client.cpp  experiment.cpp  logger.cpp
